--- a/indexg.html
+++ b/indexg.html
@@ -6,17 +6,26 @@
     <meta name="viewport" content="width=	, initial-scale=1.0">
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="//cdn.rawgit.com/donmccurdy/aframe-physics-system/v4.0.1/dist/aframe-physics-system.min.js"></script>
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
     <title>test gezeik</title>
     
 </head>
 <body>
     <a-scene physics="debug: true">
+        <a-assets>
+            <asset-item id="hoofd-obj" src="obj/hoofdje.obj"></asset-item>
+            <asset-item id="hoofd-mtl" src="obj/hoofdje.mtl"></asset-item>
+        </a-assets>
         <a-camera static-body id="camera">
             <a-cursor color="gold"></a-cursor>
         </a-camera>
+
+        <a-entity obj-model="obj: #hoofd-obj; mtl:#hoofd-mtl" class="js--hoofd" position="-3 0 -2" scale="0.6 0.6 0.6" rotation="0 0 0" opacity="1" ></a-entity>
+        <a-obj-model id="hoofd" src="#hoofd-obj" position= "-3 0 -2" scale= "0.6 0.6 0.6" rotation= "0 0 0" color="#FFC3A0" opacity="0.1"></a-obj-model>
+
         <a-plane static-body id="vloer" height="10" width="10" color="grey" rotation="-90 0 0"></a-plane>
-        <a-box dynamic-body id="object" position="0 3 -1s" color="red" spring="target: #camera; damping: 0.10; stiffness: 150;"></a-box>
+        <a-box dynamic-body id="object" position="0 3 -1s" color="red" ></a-box>
+
     </a-scene>
 </body>
 </html>
