--- a/indexy.html
+++ b/indexy.html
@@ -8,14 +8,14 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
     <script src="//cdn.rawgit.com/donmccurdy/aframe-physics-system/v4.0.1/dist/aframe-physics-system.min.js"></script>
-    <script src="engecomponent.js"></script>
-    <script src="hoofdkleur.js" defer></script>
-    <script src="main.js" defer></script>
+    <script src="js/engecomponent.js"></script>
+    <script src="js/hoofdkleur.js" defer></script>
+    <script src="js/main.js" defer></script>
     <title>Strandje</title>
 </head>
 
 <body>
-    <a-scene physics="debug: true">
+    <a-scene physics="debug: false">
         <a-assets>
             <asset-item id="handjes-obj" src="models/handjes.obj"></asset-item>
             <asset-item id="handjes-mtl" src="models/handjes.mtl"></asset-item>
@@ -39,7 +39,7 @@
 
         <a-camera static-body id="camera">
             <a-cursor class="js--cursor" color="black">
-                <a-entity id="handD" obj-model="obj: #handjes-obj; mtl: #strand-mtl" position="0 -0.9 0 " scale="0.25 0.25 0.25 rotation=" -2 90 0></a-entity>
+                <a-entity static-body="shape:none" id="handD" obj-model="obj: #handjes-obj; mtl: #strand-mtl" position="0 -0.9 0 " scale="0.25 0.25 0.25 rotation=" -2 90 0></a-entity>
             </a-cursor>
             <a-entity animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1" animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 1000; from: 1 1 1; to: 0.1 0.1 0.1" animation__mouseleave="property: scale; startEvents: mouseleave; easing: easeInCubic; dur: 500; to: 1 1 1"
                 cursor="fuse: true;" position="0 0 -1" geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03" material="color: black; shader: flat" raycaster="far: 20; interval: 1000; objects: .picks, .places, .reset, .play, .starter, .tassie">
@@ -54,8 +54,9 @@
             </a-entity>
             <a-obj-model hoofdkleur="6min" id="hoofd" src="#hoofd-obj" position="1.5 -4 0" scale="3 3 3" rotation="0 30 0" color="#FFC3A0" opacity="0.2"></a-obj-model>
         </a-sphere>
-        <a-plane static-body id="vloer" rotation="-90 0 0 " scale="10 10 10 " color="#f5d376 "></a-plane>
-        <a-obj-model dynamic-body id="object" class="tassie" src="#tas-obj" position="1 3 1" rotation=" 0 0 0" scale="0.01 0.01 0.01" color="darkred"></a-obj-model>
+
+        <a-plane static-body id="vloer" position="0 0 0" rotation="-90 0 0 " scale="10 10 10 " color="#f5d376 "></a-plane>
+        <a-obj-model dynamic-body id="object" class="tassie" src="#tas-obj" position="1  1" rotation=" 0 0 0" scale="0.01 0.01 0.01" color="darkred"></a-obj-model>
 
         <a-ocean width="200 " depth="200 " density="40 " opacity="1 " position="0 -0.7 0 "></a-ocean>
         <a-sky src="#sky" position="0 100 0 "></a-sky>
