--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a-entity class="box"box="" position="4 1 -7"></a-entity>
         <a-entity class="box_red"box_event="" position="-3 1 -7"></a-entity>
         <a-camera id="camera" wasd-controls-enabled="false">
+            <a-text position="-0.5 0.2 -0.3" value="-Find the bag" color="black" scale="0.1 0.1 0.1"></a-text>
             <a-entity
                 animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1"
                 animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 1000; from: 1 1 1; to: 0.1 0.1 0.1"
