--- a/indexy.html
+++ b/indexy.html
@@ -11,7 +11,7 @@
     <script src="js/engecomponent.js"></script>
     <script src="js/hoofdkleur.js" defer></script>
     <script src="js/main.js" defer></script>
-    <title>Strandje</title>
+    <title>Strand</title>
 </head>
 
 <body>
@@ -37,28 +37,48 @@
             <img id="sky" src="models/sky.jpg"></img>
         </a-assets>
 
-        <a-camera static-body id="camera">
+        <a-camera static-body="shape:none" id="camera">
+            <a-text id="text" position="-0.5 0.2 -0.3" value="-Find the bag" color="black" scale="0.1 0.1 0.1"></a-text>
+            <a-text id="timer" position="0.3 0.2 -0.3" value="" color="black" scale="0.1 0.1 0.1"></a-text>
             <a-cursor class="js--cursor" color="black">
-                <a-entity static-body="shape:none" id="handD" obj-model="obj: #handjes-obj; mtl: #strand-mtl" position="0 -0.9 0 " scale="0.25 0.25 0.25 rotation=" -2 90 0></a-entity>
+                <a-entity id="handD" obj-model="obj: #handjes-obj; mtl: #strand-mtl" position="0 -0.9 0 " scale="0.25 0.25 0.25 rotation=" -2 90 0></a-entity>
             </a-cursor>
             <a-entity animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1" animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 1000; from: 1 1 1; to: 0.1 0.1 0.1" animation__mouseleave="property: scale; startEvents: mouseleave; easing: easeInCubic; dur: 500; to: 1 1 1"
-                cursor="fuse: true;" position="0 0 -1" geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03" material="color: black; shader: flat" raycaster="far: 20; interval: 1000; objects: .picks, .places, .reset, .play, .starter, .tassie">
+                cursor="fuse: true;" position="0 0 -1" geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03" material="color: black; shader: flat" raycaster="far: 20; interval: 1000; objects: .picks, .places, .reset, .play, .starter, .aed, .drukken, .tassie">
             </a-entity>
             <a-text position="-0.5 0.2 -0.3" value="-Find the bag" color="black" scale="0.1 0.1 0.1"></a-text>
         </a-camera>
-        <a-entity id="strand" obj-model="obj: #strand-obj; mtl: #strand-mtl" position="0 -0.1 0 " scale="0.8 0.8 0.8" rotation="-2 90 0"></a-entity>
+        <a-sphere id="place" class="plekk" color="red" radius="0.2" position="-1.5 0 -1">
+            <a-obj-model id="object2" class="tassie" src="#tas-obj" scale="0.01 0.01 0.01" color="darkred" visible="false"></a-obj-model>
+        </a-sphere>
         <a-sphere compressie="start" id="character" class="starter" position="-3 1 0.5" scale="0.2 0.2 0.2" color="green" opacity="0.5">
+            <a-text id="startText" value="Start reanimatie" position="2 1.5 2" rotation="0 120 0" scale="3 3 3"></a-text>
             <a-entity id="handjes" obj-model="obj: #drukhand-obj" position="1 -2.5 1.5" scale="0.7 0.7 0.7" rotation="0 90 0" visible="false"></a-entity>
-            <a-entity id="aed" obj-model="obj: #aed-obj; mtl: #aed-mtl" position="6.3 -3.5 -1.5" scale="3 3 3" rotation="0 20 0" visible="true"></a-entity>
+            <a-entity id="aed" obj-model="obj: #aed-obj; mtl: #aed-mtl" position="6.3 -3.5 -1.5" scale="3 3 3" rotation="0 20 0" visible="false"></a-entity>
+            <a-entity id="adem" obj-model="obj: #adem-obj; mtl: #adem-mtl" position="1 -4 0.5" scale="3 3 3" rotation="0 20 0" visible="true"></a-entity>
             <a-entity obj-model="obj: #vent-obj; mtl: #vent-mtl" position="1.5 -4 0" scale="3 3 3" rotation="0 30 0">
                 <a-entity id="patient" obj-model="obj: #romp-obj; mtl: #romp-mtl" position="-0.2 0.05 4" rotation=" -85 0 0"></a-entity>
             </a-entity>
             <a-obj-model hoofdkleur="6min" id="hoofd" src="#hoofd-obj" position="1.5 -4 0" scale="3 3 3" rotation="0 30 0" color="#FFC3A0" opacity="0.2"></a-obj-model>
         </a-sphere>
 
-        <a-plane static-body id="vloer" position="0 0 0" rotation="-90 0 0 " scale="10 10 10 " color="#f5d376 "></a-plane>
-        <a-obj-model dynamic-body id="object" class="tassie" src="#tas-obj" position="1  1" rotation=" 0 0 0" scale="0.01 0.01 0.01" color="darkred"></a-obj-model>
+        <a-sphere class="aed" position="-2.7 1 1" scale="0.2 0.2 0.2" color="yellow" opacity="0.5" visible="false">
+            <a-text value="Gebruik AED" position="2 2 0.5" rotation="0 120 0" scale="2 2 2"></a-text>
+        </a-sphere>
+        <a-sphere class="drukken" position="-2.5 1 1.5" scale="0.2 0.2 0.2" color="red" opacity="0.5" visible="false">
+            <a-text value="Compressie" position="2 2 0" rotation="0 120 0" scale="2 2 2"></a-text>
+        </a-sphere>
 
+        <a-sphere class="ademhaling" position="-2.5 1 1.5" scale="0.2 0.2 0.2" color="red" opacity="0.5" visible="false">
+            <a-text value="Compressie" position="2 2 0" rotation="0 120 0" scale="2 2 2"></a-text>
+        </a-sphere>
+
+        <a-plane static-body id="vloer" position="0 0 0" rotation="-90 0 0 " scale="10 10 10 " color="#f5d376 "></a-plane>
+        <a-obj-model dynamic-body id="object" class="tassie" src="#tas-obj" position="-1 1 -2" rotation=" 0 0 0" scale="0.01 0.01 0.01" color="darkred"></a-obj-model>
+        <a-entity id="strand" obj-model="obj: #strand-obj; mtl: #strand-mtl" position="0 -0.1 0 " scale="0.8 0.8 0.8" rotation="-2 90 0"></a-entity>
+        <a-entity obj-model="obj: #palm-obj; mtl: #palm-mtl" position="3 0 -5 " scale="0.8 0.8 0.8" rotation="0 180 0"></a-entity>
+        <a-entity obj-model="obj: #palm-obj; mtl: #palm-mtl" position="-4 0 6 " scale="0.8 0.8 0.8" rotation="0 90 0"></a-entity>
+        <a-entity obj-model="obj: #palm-obj; mtl: #palm-mtl" position="-2 0 -8 " scale="0.8 0.8 0.8" rotation="0 100 0"></a-entity>
         <a-ocean width="200 " depth="200 " density="40 " opacity="1 " position="0 -0.7 0 "></a-ocean>
         <a-sky src="#sky" position="0 100 0 "></a-sky>
 
