--- a/indexy.html
+++ b/indexy.html
@@ -25,7 +25,7 @@
             <source src="soundsD/heartbeat.mp3" type="audio/mpeg">
         </audio>
     </div>
-    <a-scene physics="debug: true">
+    <a-scene physics="debug: false">
         <a-assets>
             <asset-item id="handjes-obj" src="models/handjes.obj"></asset-item>
             <asset-item id="handjes-mtl" src="models/handjes.mtl"></asset-item>
