--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
             <a-cursor id="cursor" color="black"></a-cursor>
         </a-camera>
         <a-plane id="scherm" visible="false" height="3" width="10" color="black" position="0 2 -4" text="value: Je gaat nu starten met de vr.
-        De instructies komen links boven in je scherm, de timer komt rechtsboven.
+        De instructies komen boven in je scherm, de timer komt rechtsboven.
         Probeer alle instructies uit te voeren voordat de tijd op is.
+        De stappen veranderen zodra het gelukt is. Dus blijf proberen!
         ; align: center;width:6; color: white" opacity="0.5">
         </a-plane>
         <a-plane id="plays" class="play" text="value: PLAY; align: center;width:10; color: white" position="0 2.5 -3" color="grey" width="2.5" height="1.5" animation="property: position; to: 0 2.75 -3; dir: alternate; loop: true; dur: 8000; easing: easeInOutQuad;"></a-plane>
